# fortress-gitops

./: .claude-state-updated.json  .claude-state.json  .gitignore  ADVANCED_FEATURES_PLAN.md  CODESPACE_TROUBLESHOOTING.md  COMPONENTS_CHECKLIST.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  ENHANCED_MCP_ARCHITECTURE.md  ENHANCED_WEB_INTERFACE_PLAN.md  INFRASTRUCTURE_PLAN.md  Makefile  PHASE4_ADVANCED_FEATURES_PLAN.md  README-DEMO.md  README.md  ROADMAP.md  STARTUP_GUIDE.md  WORKSPACE_SETUP.md  build-advanced-services.sh  build-all-services.sh  build-enhanced-web-ui.sh  build-enterprise.sh  build-images-only.sh  build-images.sh  build-missing-images.sh  build-only.sh  build-rocky-final.sh  build-rocky.sh  build-simple-images.sh  demo.ipynb  deploy-enhanced-ui.sh  deploy-simple-db.sh  fix-deployment.sh  fix-prometheus-metrics.sh  fortress-deploy.yaml  fortress-setup-commands.md  harbor-image-build-request.json  poc-demo.py  poc-report-1753292259.json  push-all.sh  push-images.sh  (+19 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  Dockerfile.backup  codespaces-poc-values.yaml  devcontainer.json  docker-compose.yml  nginx.conf  poc-values.yaml  postCreate.sh  postStart.sh
.devcontainer/init-scripts/: 01-init-database.sql
.devcontainer/ui/: index.html
.github/: codespace-poc-quick-start.md  codespace-poc.md
.github/workflows/: ci-cd.yml  ci.yml  security-testing.yml  security.yml
agents/fortress-agent/: Dockerfile  agent-architecture.md  dynamic-agent-architecture.md  enhanced-daemonset.yaml  requirements.txt
argocd/applications/: fortress-advanced-apis.yaml  fortress-agent-integration.yaml  fortress-core-services.yaml  fortress-database-security.yaml  fortress-database.yaml  fortress-external-integrations.yaml  fortress-harbor.yaml  fortress-istio-mesh.yaml  fortress-main-gateway.yaml  fortress-orchestrator.yaml  fortress-security-services.yaml
cluster-config/: add-cluster.yaml  cluster-agent.yaml
database/: README.md
database/architecture/: fortress_data_architecture.md
database/deployment/: database-istio-security.yaml  database_stack.yaml
database/elasticsearch/: es_indices.json
database/integration/: scan_data_processor.py
database/models/: fortress_db.py
database/redis/: redis_config.yaml
database/schema/: core_tables.sql  scan_tables.sql
database/scripts/: init_database.sh
demo-data/: sample-sbom-minimal.json  sample-vulnerabilities.json
deployments/docker/: Containerfile.auth  Containerfile.base  Containerfile.gateway  Containerfile.notification  Containerfile.report-generator  Containerfile.scanner-manager  Containerfile.vulnerability-analyzer
deployments/production/: core-services.yaml  data-layer.yaml  monitoring.yaml  namespace.yaml  plugins.yaml
docker/fortress-orca-gui/: nginx.conf
docker/fortress-orca-gui-v2/: Dockerfile  nginx.conf
docker/fortress-orca-v2/: Dockerfile  nginx.conf
docker/fortress-react-interface/: Dockerfile  package.json
docs/: ADD-CLUSTERS.md  FORTRESS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPARISON.md  fortress-cnapp-architecture.md  plugin-development-guide.md
docs/api/: openapi.yaml
docs/deployment/: README.md
examples/: security_headers_example.py
fortress-gitops/: .gitignore  README.md
fortress-gitops/applications/: fortress-platform-prod.yaml
gitops/: README.md
gitops/agents/: fortress-agent-deployment.yaml
gitops/apps/: application-apps.yaml  fortress-orca-gui.yaml  fortress-phase2-agents.yaml  fortress-phase3-core.yaml  fortress-phase4-cnapp.yaml  infrastructure-apps.yaml  platform-apps.yaml
gitops/bootstrap/: root-app.yaml
infrastructure/gitops/: argocd-config.yaml
infrastructure/image-registry/: agent-harbor-config.yaml  agent-harbor-workflow.md  complete-harbor-deployment.yaml  docker-mirror-deployment.yaml  fortress-image-api.py  harbor-deployment.yaml  harbor-istio-config.yaml  harbor-istio-test.sh  harbor-secrets.yaml  harbor-sync-script.sh
infrastructure/istio/: fortress-main-gateway.yaml  fortress-mesh-config.yaml
infrastructure/service-mesh/: istio-config.yaml
infrastructure/vault/: vault-config.py
istio/: README.md  kustomization.yaml
istio/base/: namespace.yaml
mcp-platform/: Chart.yaml  values.yaml
plugin-sdk/: README.md  setup.py
react-interface/: Dockerfile  nginx.conf  package.json
scripts/: add-cluster.sh  align-fortress-services.sh  codespace-setup.sh  demo-poc.sh  deploy-istio.sh  rename-to-fortress-standard.sh  test-buildah.sh  test-poc.sh
services/: __init__.py
shared/: __init__.py
tests/: Dockerfile.test  README.md  conftest.py  docker-compose.test.yml  fortress-complete-validation.sh  fortress-roadmap-validation.sh  requirements.test.txt  test_auth.py  test_dashboard.py  test_integrations.py  test_reports.py  test_scans.py  test_vulnerabilities.py
web-ui/: .env.example  Dockerfile  Dockerfile.functional  README.md  build-local.sh  cluster-management.html  compliance-monitoring.html  integration-management.html  nginx-functional.conf  nginx.conf  package-lock.json  package.json  reports-analytics.html  threat-detection.html  user-management.html  vulnerability-management.html
(+656 files in other folders)
